--- a/src/globals.css
+++ b/src/globals.css
@@ -1,8 +1,54 @@
 @import 'tailwindcss';
+@plugin 'tailwindcss-plugin-zag';
 
 @theme {
   --font-sans: 'Lato', --apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
+  --animate-fade-in: fade-in 0.2s ease-in-out;
+  --animate-fade-out: fade-out 0.2s ease-in-out;
+  --animate-scalefade-in: scalefade-in 0.2s ease-in-out;
+  --animate-scalefade-out: scalefade-out 0.2s ease-in-out;
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fade-out {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
+  @keyframes scalefade-in {
+    0% {
+      opacity: 0;
+      transform: scale(0.9);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  @keyframes scalefade-out {
+    0% {
+      opacity: 1;
+      transform: scale(1);
+    }
+    100% {
+      opacity: 0;
+      transform: scale(0.9);
+    }
+  }
 }
 
 @layer base {
