--- a/src/globals.css
+++ b/src/globals.css
@@ -2,8 +2,11 @@
 @plugin 'tailwindcss-plugin-zag';
 
 @theme {
-  --font-sans: 'Lato', --apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+  --font-heading: 'Lato', --apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  --font-body: 'Inter', --apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  --font-mono: 'Fira Code', 'Courier New', Courier, monospace;
 
   --animate-backdrop-in: backdrop-in 400ms cubic-bezier(0.05, 0.7, 0.1, 1);
   --animate-backdrop-out: backdrop-out 250ms cubic-bezier(0.3, 0, 0.8, 0.15);
